# fake-sensors

./: .gitignore  CMakeLists.txt  README.md  mock-lidar.csv  package.xml
src/: README.md  fake_camera.cpp  fake_lidar.cpp
